--- a/RxJava/app/src/main/AndroidManifest.xml
+++ b/RxJava/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RxJava">
-        <activity android:name=".doOnNext.MainActivity"></activity>
+        <activity android:name=".source.RxjavaActivity1"></activity>
+        <activity android:name=".doOnNext.MainActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
