--- a/JetPack/app/build.gradle
+++ b/JetPack/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt' // 提前加入的 支持 @BIndingAdapter
 }
 
 android {
@@ -61,6 +62,14 @@ dependencies {
     compileOnly 'androidx.lifecycle:lifecycle-viewmodel:2.2.0'
     compileOnly 'androidx.lifecycle:lifecycle-livedata:2.2.0'
 
-
     implementation 'com.sothree.slidinguppanel:library:3.4.0'
+
+    implementation 'net.steamcrafted:materialiconlib:1.1.5'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    implementation 'com.kunminx.player:player:1.1.6'
+
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
